--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -676,15 +676,28 @@
     justify-content: space-between;
 }
 
+.formRowEmail {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 20px;
+}
+
 .rowLabel {
     width: 150px;
     font-size: 16px;
     font-weight: 500;
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: flex-start;
     text-align: center;
-    flex-shrink: 0;
+}
+
+.rowFieldColumn {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .rowField {
@@ -692,6 +705,22 @@
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+/* 비밀번호 전용 라인 */
+.formRowPwd {
+  display: flex;
+  align-items: flex-start; /* 라벨을 첫 줄에 맞춤 */
+  justify-content: flex-start;
+  gap: 20px;
+}
+
+/* 오른쪽 필드 */
+.rowFieldColumn {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .inputError {
@@ -726,7 +755,7 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    height: 220px;
+    height: auto;
 }
 
 .emailRow {
