--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -558,7 +558,7 @@
     max-height: 250px;
     margin-top: 71px;
     margin-bottom: 45px;
-    padding-right: 12px;
+    padding: 0 30px;
 }
 
 .contentTitle {
@@ -571,6 +571,7 @@
 }
 
 .contentText {
+    min-width: 240px;
     color: #555;
     font-family: Noto Sans KR, sans-serif;
     font-size: 18px;
@@ -621,7 +622,12 @@
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 18px;
     line-height: 180%; /* 32.4px */
-
+    /* 추가 */
+    display: inline-block; /* 줄바꿈 허용 */
+    max-width: 350px; /* 원하는 최대 너비 설정 */
+    white-space: normal; /* 줄바꿈 가능하게 */
+    word-break: break-all; /* 단어 길면 강제 줄바꿈 */
+    overflow-wrap: break-word; /* 최신 브라우저 호환용 */
 }
 
 .buttonContainer {
