--- a/src/styles/Mypage.module.css
+++ b/src/styles/Mypage.module.css
@@ -1029,8 +1029,12 @@
     gap: 10px;
     flex-shrink: 0;
     border-radius: 5px;
-    border: 1px solid #E8E8E8;
     background: #FFF;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 10;
+    cursor: pointer;
 }
 
 .deleteButton {
