테스트 결과 : 대체적으로 맞는데 일부 안맞음 (2차 교정)

--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -800,7 +800,7 @@
 
 .routeVector {
     position: absolute;
-    left: -50px;
+    left: -44px;
     top: 75%;
 }
 
@@ -1824,8 +1824,7 @@
     overflow-x: hidden;
     width: 100%;
     box-sizing: border-box;
-    padding: 10px 0;
+    padding: 10px 0 10px 20px;
     list-style: none;
-    margin: 0;
-    margin-left: 47px;
+    margin-left: 23px;
 }
